[package]
name = "rdap-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

ureq = { version = "2.6.2",features = ["json"] }

pollster = "0.3.0"

iso3166-1 = "1.0.1"